--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
       "ecmaVersion": 12,
-      "sourceType": "module",
+      "sourceType": "module"
     },
     "plugins": ["@typescript-eslint"],
     // HERE
@@ -11,7 +11,7 @@
   
     "rules": {
       "@typescript-eslint/no-unused-vars": "error",
-      "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+      "@typescript-eslint/consistent-type-definitions": ["error", "type"]
     },
   
     "env": {
