--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "lint-prettier": "npm run lint:check && npm run prettier:check",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node-dev --respawn --transpile-only server.ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint-staged": "npm run lint-prettier"
   },
   "author": "senseiX",
   "license": "ISC",
+  "lint-staged": {
+    "src/**/*.ts": "npm run lint:prettier"
+  },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/dotenv-webpack": "^7.0.4",
@@ -26,6 +30,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
